--- a/slack-jahia/action.yml
+++ b/slack-jahia/action.yml
@@ -24,13 +24,13 @@ runs:
   steps:
     - name: Empty the Docker command variable
       shell: bash
-      if: ${{ inputs.skip-docker == true }}
+      if: ${{ inputs.skip-docker == 'true' }}
       run: |
         echo 'DOCKER_COMMAND=""' >> $GITHUB_ENV
         echo "TEST=test" >> $GITHUB_ENV
     - name: Set the docker command variable
       shell: bash
-      if: ${{ inputs.skip-docker == false }}
+      if: ${{ inputs.skip-docker == 'false' }}
       run: |
         echo 'DOCKER_COMMAND="\`\`\`docker pull jahia/${{ inputs.docker-repo }}:${{ inputs.docker-image-tag }}\`\`\`"' >> $GITHUB_ENV
         echo "TEST2=test2" >> $GITHUB_ENV
