--- a/slack-jahia/action.yml
+++ b/slack-jahia/action.yml
@@ -25,24 +25,11 @@ runs:
     - name: Empty the Docker command variable
       shell: bash
       if: ${{ inputs.skip-docker == 'true' }}
-      run: |
-        echo 'DOCKER_COMMAND=""' >> $GITHUB_ENV
-        echo "TEST=test" >> $GITHUB_ENV
+      run: echo 'DOCKER_COMMAND=""' >> $GITHUB_ENV
     - name: Set the docker command variable
       shell: bash
       if: ${{ inputs.skip-docker == 'false' }}
-      run: |
-        echo 'DOCKER_COMMAND="\`\`\`docker pull jahia/${{ inputs.docker-repo }}:${{ inputs.docker-image-tag }}\`\`\`"' >> $GITHUB_ENV
-        echo "TEST2=test2" >> $GITHUB_ENV
-    - name: Test DOCKER_COMMAND
-      shell: bash
-      run: |
-        echo $DOCKER_COMMAND
-        echo ${{ env.DOCKER_COMMAND }}
-        echo $TEST
-        echo ${{ env.TEST }}
-        echo $TEST2
-        echo ${{ env.TEST2 }}
+      run: echo 'DOCKER_COMMAND="\`\`\`docker pull jahia/${{ inputs.docker-repo }}:${{ inputs.docker-image-tag }}\`\`\`"' >> $GITHUB_ENV
     - name: Get branch name
       id: branch-name
       uses: tj-actions/branch-names@v5.4
@@ -59,7 +46,7 @@ runs:
                 "text":
                   {
                     "type": "mrkdwn",
-                    "text": ":white_check_mark: New build available for *${{ github.event.repository.name }}* (Job artifacts: <https://github.com/Jahia/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}#artifacts|*${{ github.job }}*>, Branch: *${{ steps.branch-name.outputs.current_branch }}*) $DOCKER_COMMAND"
+                    "text": ":white_check_mark: New build available for *${{ github.event.repository.name }}* (Job artifacts: <https://github.com/Jahia/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}#artifacts|*${{ github.job }}*>, Branch: *${{ steps.branch-name.outputs.current_branch }}*) ${{ env.DOCKER_COMMAND }}"
                   }
               }
             ]
