--- a/slack-jahia/action.yml
+++ b/slack-jahia/action.yml
@@ -40,7 +40,7 @@ runs:
       with:
         payload: |
           {
-            "blocks": [s
+            "blocks": [
               {
                 "type": "section",
                 "text":
