--- a/slack-jahia/action.yml
+++ b/slack-jahia/action.yml
@@ -46,7 +46,7 @@ runs:
                 "text":
                   {
                     "type": "mrkdwn",
-                    "text": ":white_check_mark: New build available for *${{ github.event.repository.name }}* (Job artifacts: <https://github.com/Jahia/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}#artifacts|*${{ github.job }}*>, Branch: *${{ steps.branch-name.outputs.current_branch }}*) ${{ env.DOCKER_COMMAND }}"
+                    "text": ':white_check_mark: New build available for *${{ github.event.repository.name }}* (Job artifacts: <https://github.com/Jahia/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}#artifacts|*${{ github.job }}*>, Branch: *${{ steps.branch-name.outputs.current_branch }}*) ${{ env.DOCKER_COMMAND }}'
                   }
               }
             ]
