--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -119,6 +119,10 @@ inputs:
     description: 'Should the job attempt to download previously built artifacts'
     required: false
     default: 'true'
+  build_artifacts:
+    description: 'Name of the artifacts to download from previous job'
+    required: false
+    default: 'build-artifacts'
   should_skip_zencrepes:
     description: 'Should zencrepes notifications be skipped ?'
     required: false
