--- a/slack-jahia/action.yml
+++ b/slack-jahia/action.yml
@@ -17,25 +17,26 @@ inputs:
   slack-webhook:
     description: "Webhook that allows to send on Jahia slack"
     required: true
+  
 
 runs:
   using: "composite"
   steps:
     - name: Empty the Docker command variable
       shell: bash
-      if: ${{ ${{ inputs.skip-docker }} = true }}
+      if: ${{ inputs.skip-docker == 'true' }}
       run: echo 'DOCKER_COMMAND=""' >> $GITHUB_ENV
     - name: Set the docker command variable
       shell: bash
-      if: ${{ ${{ inputs.skip-docker }} = false }}
-      run: echo 'DOCKER_COMMAND="\`\`\`docker pull jahia/${{ inputs.docker-repo }}:${{ inputs.docker-image-tag }}\`\`\`"' >> $GITHUB_ENV
+      if: ${{ inputs.skip-docker == 'false' }}
+      run: echo 'DOCKER_COMMAND=```docker pull jahia/${{ inputs.docker-repo }}:${{ inputs.docker-image-tag }}```' >> $GITHUB_ENV
     - name: Get branch name
       id: branch-name
       uses: tj-actions/branch-names@v5.4
 
     # if there was no failure
     - uses: slackapi/slack-github-action@v1.18.0
-      if: ${{ ${{ inputs.job-event }} == "pass" }}
+      if: ${{ inputs.job-event == 'pass' }}
       with:
         payload: |
           {
@@ -45,7 +46,7 @@ runs:
                 "text":
                   {
                     "type": "mrkdwn",
-                    "text": ":white_check_mark: New build available for *${{ env.GITHUB_REPOSITORY }}* (Job artifacts: <https://github.com/Jahia/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ env.GITHUB_RUN_ID }}#artifacts|*${{ env.GITHUB_JOB }}*>, Branch: *${{ steps.branch-name.outputs.current_branch }}*) ${DOCKER_COMMAND}"
+                    "text": ":white_check_mark: New build available for *${{ github.event.repository.name }}* (Job artifacts: <https://github.com/Jahia/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}#artifacts|*${{ github.job }}*>, Branch: *${{ steps.branch-name.outputs.current_branch }}*) ${{ env.DOCKER_COMMAND }}"
                   }
               }
             ]
@@ -55,7 +56,7 @@ runs:
         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
     - uses: slackapi/slack-github-action@v1.18.0
-      if: ${{ ${{ inputs.job-event }} == "fail" }}
+      if: ${{ inputs.job-event == 'fail' }}
       with:
         payload: |
           {
@@ -65,7 +66,7 @@ runs:
                 "text":
                   {
                     "type": "mrkdwn",
-                    "text": ":x: Build failure for *${{ env.GITHUB_REPOSITORY }}* (Job artifacts: <${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }}/actions/runs/${{ GITHUB_RUN_ID }}|*${{ env.GITHUB_JOB }}*>, Branch: *${{ steps.branch-name.outputs.current_branch }}*)"
+                    "text": ":x: Build failure for *${{ github.event.repository.name }}* (Job artifacts: <${{ github.server_url }}/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}|*${{ github.job }}*>, Branch: *${{ steps.branch-name.outputs.current_branch }}*)"
                   }
               }
             ]
