--- a/docker-tags/action.yml
+++ b/docker-tags/action.yml
@@ -46,5 +46,5 @@ runs:
         echo "PARAM_DRYRUN=${{ inputs.dry-run }}" >> $GITHUB_ENV
     - name: Run script
       shell: bash
-      run: .github/actions/docker-tags/scripts/docker-tags.sh
+      run: ${{ github.workspace }}/../../_actions/jahia/jahia-modules-action/TECH-532/docker-tags/scripts/docker-tags.sh
 
