--- a/upload-bastion/action.yml
+++ b/upload-bastion/action.yml
@@ -27,7 +27,6 @@ runs:
   using: "composite"
   steps:
     - uses: webfactory/ssh-agent@v0.5.4
-      if: ${{ inputs.destination == 'jahia' }}
       with:
           ssh-private-key: ${{ inputs.ssh-key }}
 
@@ -35,7 +34,7 @@ runs:
       shell: bash
       run: |
         ls -lah
-        if ! sh -c "rsync -rvz -e 'ssh -A -o \"ProxyCommand=ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=off -W %h:%p -p 220 ${{ inputs.bastion-user }}@circleci-bastion-prod.jahia.com\" -o StrictHostKeyChecking=off' ${{ inputs.path }} ${{ inputs.destination-user }}@${{ inputs.destination-host }}:{{ inputs.destination-path }}"
+        if ! sh -c "rsync -rvz -e 'ssh -A -o \"ProxyCommand=ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=off -W %h:%p -p 220 ${{ inputs.bastion-user }}@circleci-bastion-prod.jahia.com\" -o StrictHostKeyChecking=off' ${{ inputs.path }} ${{ inputs.destination-user }}@${{ inputs.destination-host }}:${{ inputs.destination-path }}"
         then
           echo ::set-output name=status::'There was an issue syncing the content.'
           exit 1
@@ -45,6 +44,5 @@ runs:
 
     - name: Send notice about file location
       shell: bash
-      if: ${{ inputs.destination == 'jahia' }}
       run: |
-        echo "::notice title=Artifacts location (require VPN)::Artifacts have been uploaded to: ${{ inputs.destination-host }}:{{ inputs.destination-path }}"
+        echo "::notice title=Artifacts location (require VPN)::Artifacts have been uploaded to: ${{ inputs.destination-host }}:${{ inputs.destination-path }}"
