--- a/docker-tags/action.yml
+++ b/docker-tags/action.yml
@@ -26,6 +26,11 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Docker login
+      uses: docker/login-action@v1
+      with:
+        username: ${{ inputs.docker_username }}
+        password: ${{ inputs.docker_password }}
     - name: Handle version parameter (file or version string)
       shell: bash
       run: |
