--- a/docker-tags/action.yml
+++ b/docker-tags/action.yml
@@ -34,20 +34,26 @@ runs:
     - name: Handle version parameter (file or version string)
       shell: bash
       run: |
+        echo "::group::Setup environment variables from inputs"
         if [[ -e ${{ inputs.version }} ]]; then
           echo 'PARAM_VERSION=$(cat ${{ inputs.version }})' >> $GITHUB_ENV
         else
           echo 'PARAM_VERSION=${{ inputs.version }}' >> $GITHUB_ENV
         fi
-    - name: Verifying version in environment variable
-      shell: bash
-      run: echo PARAM_VERSION=${{ env.PARAM_VERSION }}
-    - name: Generate missing Docker tags
-      shell: bash
-      run: |
         echo "PARAM_ORG=${{ inputs.org }}" >> $GITHUB_ENV
         echo "PARAM_REPO=${{ inputs.repo }}" >> $GITHUB_ENV
-        echo "PARAM_DRYRUN=${{ inputs.dry-run }}" >> $GITHUB_ENV
+        echo "PARAM_DRYRUN=${{ inputs.dry-run }}" >> $GITHUB_ENV        
+        echo "::endgroup::"      
+    - name: Verifying version in environment variable
+      shell: bash
+      run: |
+        echo "::group::Display environment variables"
+        echo PARAM_VERSION=${{ env.PARAM_VERSION }}
+        echo PARAM_ORG=${{ env.PARAM_ORG }}
+        echo PARAM_REPO=${{ env.PARAM_REPO }}
+        echo PARAM_DRYRUN=${{ env.PARAM_DRYRUN }}
+        echo "::endgroup::"      
+
     - name: Run script
       shell: bash
       run: bash ${{ github.action_path }}/scripts/docker-tags.sh
