--- a/docker-tags/action.yml
+++ b/docker-tags/action.yml
@@ -42,6 +42,7 @@ runs:
         else
           export PARAM_VERSION=${{ inputs.version }}
         fi
+        echo ${PARAM_VERSION}
         PARAM_VERSION_MAJOR=$(echo "${PARAM_VERSION}" | awk -F . '{print $1}' )
         PARAM_VERSION_MINOR=$(echo "${PARAM_VERSION}" | awk -F . '{print $2}' )
         PARAM_VERSION_HF=$(echo "${PARAM_VERSION}" | awk -F . '{print $3}' )
